<resources>
    <string name="app_name">CSDN 博客</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- app相关-->
    <string name="gmail_address">mijackstudio@gmail.com</string>
    <string name="author">袁宇杰(Mi&amp;Jack)</string>
    <string name="github">GitHub:\tgithub.com/MiJack</string>

    <string name="order_by_hot">最热</string>
    <string name="order_by_time">最新</string>

    <string name="application">应用</string>
    <string name="title_activity_about">关于</string>
    <!--博客分类-->
    <string name="blog_category">"博客分类"</string>
    <string name="category_mobile">移动开发</string>
    <string name="category_web">Web前端</string>
    <string name="category_enterprise">架构设计</string>
    <string name="category_code">编程语言</string>
    <string name="category_www">互联网</string>
    <string name="category_database">数据库</string>
    <string name="category_system">系统运维</string>
    <string name="category_cloud">云计算</string>
    <string name="category_software">研发管理</string>
    <string name="category_other">综合</string>
    <string name="app_about">关于</string>
    <string name="snack_ok">知道了</string>


    <string name="example_content">轻开平台（WebEasy）提供了简便的字符串操作功能，写法类似于(计算表达式)书包取值表达式...</string>
    <string name="example_title">轻开平台（原WebEasy）字符串计算</string>
    <string name="title_activity_author">个人主页</string>
    <string name="title_activity_blog">BlogActivity</string>


    <string name="app_version">v 1.1</string>
    <string name="app_introdution">\t\t本APP为浙江工业大学天鸽杯参赛作品，其主要功能是以手机APP的形式浏览CSDN的博客，支持从浏览器打开以及分享。
    \n\t\t本应用源代码已经公布在Github上，可以搜索“CSDN-Blog-Client”或者直接访问https://github.com/MiJack/CSDN-Blog-Client，欢迎各位开发者fork本项目。</string>
    <string name="copy_right">Copyright 2014 Google Inc. All rights reserved.
        \n
        \n
\tLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
        \n\n
        \t\t http://www.apache.org/licenses/LICENSE-2.0
\n\n\t
Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="copyright">Copyright</string>
    <string name="summary">简介</string>

    <string name="share">分享</string>
    <string name="open_with_browser">在浏览器打开</string>
    <string name="open_with_browser_content">请选择打开网站的方式</string>
    <string name="use_pc_url">电脑版</string>
    <string name="use_mobile_url">移动版</string>
    <string name="choose_browser">选择打开的浏览器</string>


</resources>
