<com.github.ksoichiro.android.observablescrollview.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context="xyz.mijack.csdn.blog.ui.AboutActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/material_design_color_grey_700" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_version"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/material_design_color_grey_700" />

        <android.support.v7.widget.CardView
            style="@style/style_card_view"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout style="@style/style_container">

                <TextView
                    style="@style/style_title"
                    android:text="@string/summary" />

                <TextView
                    style="@style/style_content"
                    android:text="@string/app_introdution" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/style_card_view"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout style="@style/style_container">

                <TextView
                    style="@style/style_title"
                    android:text="使用的开源项目" />

                <LinearLayout
                    android:id="@+id/open_library_list"
                    style="@style/style_content"
                    android:orientation="vertical" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/style_card_view"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout style="@style/style_container">

                <TextView
                    style="@style/style_title"
                    android:text="@string/copyright" />

                <TextView
                    style="@style/style_content"
                    android:text="@string/copy_right" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</com.github.ksoichiro.android.observablescrollview.ObservableScrollView>